test/TestSuite/Syntax/Errors/booking_milestone.tjp
project test "Test" "1.0" 2007-08-19 +2m 

resource tux "Tux"

task t "T" {
  start 2007-08-19
  milestone
}

supplement resource tux {
# MARK: error 12 booking_milestone
	booking t 2007-08-25-10:00 +2h
}
